run make format

--- a/docs/docs/integrations/chat/nvidia_ai_endpoints.ipynb
+++ b/docs/docs/integrations/chat/nvidia_ai_endpoints.ipynb
@@ -585,7 +585,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tool_models = [model for model in ChatNVIDIA.get_available_models() if model.supports_tools]\n",
+    "tool_models = [\n",
+    "    model for model in ChatNVIDIA.get_available_models() if model.supports_tools\n",
+    "]\n",
     "tool_models"
    ]
   },
@@ -607,12 +609,14 @@
     "from langchain_core.pydantic_v1 import Field\n",
     "from langchain_core.tools import tool\n",
     "\n",
+    "\n",
     "@tool\n",
     "def get_current_weather(\n",
-    "    location: str = Field(..., description=\"The location to get the weather for.\")\n",
+    "    location: str = Field(..., description=\"The location to get the weather for.\"),\n",
     "):\n",
     "    \"\"\"Get the current weather for a location.\"\"\"\n",
     "    ...\n",
+    "\n",
     "\n",
     "llm = ChatNVIDIA(model=tool_models[0].id).bind_tools(tools=[get_current_weather])\n",
     "response = llm.invoke(\"What is the weather in Boston?\")\n",
