--- a/docs/docs/integrations/chat/ollama_functions.ipynb
+++ b/docs/docs/integrations/chat/ollama_functions.ipynb
@@ -16,6 +16,11 @@
    "source": [
     "# OllamaFunctions\n",
     "\n",
+    ":::{.callout-caution}\n",
+    "\n",
+    "This class is being deprecated. Please use [ChatOllama](./ollama.ipynb) instead.\n",
+    ":::\n",
+    "\n",
     ":::warning\n",
     "\n",
     "This was an experimental wrapper that attempts to bolt-on tool calling support to models that do not natively support it. The [primary Ollama integration](/docs/integrations/chat/ollama/) now supports tool calling, and should be used instead.\n",
@@ -284,7 +289,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": "For more on binding tools and tool call outputs, head to the [tool calling](docs/how_to/function_calling) docs."
+   "source": [
+    "For more on binding tools and tool call outputs, head to the [tool calling](docs/how_to/function_calling) docs."
+   ]
   },
   {
    "cell_type": "markdown",
