Update screenshots, rerun notebooks

--- a/docs/docs/how_to/tool_calling.ipynb
+++ b/docs/docs/how_to/tool_calling.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "![Diagram of calling a tool](/img/tool_call.png)\n",
     "\n",
-    "If you are looking for an example of **using** tools and passing the results back to a chat model, [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
+    "If you want to see how to use the model-generated tool call to actually run a tool function [check out this guide](/docs/how_to/tool_results_pass_to_model/).\n",
     "\n",
     ":::note Supported models\n",
     "\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_g4RuAijtDcSeM96jXyCuiLSN', 'function': {'arguments': '{\"a\":3,\"b\":12}', 'name': 'Multiply'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 95, 'total_tokens': 113}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-5157d15a-7e0e-4ab1-af48-3d98010cd152-0', tool_calls=[{'name': 'Multiply', 'args': {'a': 3, 'b': 12}, 'id': 'call_g4RuAijtDcSeM96jXyCuiLSN'}], usage_metadata={'input_tokens': 95, 'output_tokens': 18, 'total_tokens': 113})"
+       "AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_wLTBasMppAwpdiA5CD92l9x7', 'function': {'arguments': '{\"a\":3,\"b\":12}', 'name': 'Multiply'}, 'type': 'function'}]}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 89, 'total_tokens': 107}, 'model_name': 'gpt-4o-mini-2024-07-18', 'system_fingerprint': 'fp_0f03d4f0ee', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run-d3f36cca-f225-416f-ac16-0217046f0b38-0', tool_calls=[{'name': 'Multiply', 'args': {'a': 3, 'b': 12}, 'id': 'call_wLTBasMppAwpdiA5CD92l9x7', 'type': 'tool_call'}], usage_metadata={'input_tokens': 89, 'output_tokens': 18, 'total_tokens': 107})"
       ]
      },
      "execution_count": 4,
@@ -222,10 +222,12 @@
       "text/plain": [
        "[{'name': 'Multiply',\n",
        "  'args': {'a': 3, 'b': 12},\n",
-       "  'id': 'call_TnadLbWJu9HwDULRb51RNSMw'},\n",
+       "  'id': 'call_uqJsNrDJ8ZZnFa1BHHYAllEv',\n",
+       "  'type': 'tool_call'},\n",
        " {'name': 'Add',\n",
        "  'args': {'a': 11, 'b': 49},\n",
-       "  'id': 'call_Q9vt1up05sOQScXvUYWzSpCg'}]"
+       "  'id': 'call_ud1uHAaYsdpWuxugwoJ63BDs',\n",
+       "  'type': 'tool_call'}]"
       ]
      },
      "execution_count": 5,
