--- a/docs/docs/how_to/chat_model_rate_limiting.ipynb
+++ b/docs/docs/how_to/chat_model_rate_limiting.ipynb
@@ -5,249 +5,113 @@
    "id": "dcf87b32",
    "metadata": {},
    "source": [
-    "# How to rate limit chat model calls\n",
+    "# How to rate limit chat models\n",
     "\n",
     ":::info Prerequisites\n",
     "\n",
     "This guide assumes familiarity with the following concepts:\n",
     "- [Chat models](/docs/concepts/#chat-models)\n",
+    "- [LLMs](/docs/concepts/#llms)\n",
     ":::\n",
     "\n",
+    "You may find yourself in situations where you want to limit the requests made by your chat model. For example, if you're running\n",
+    "evaluations and are getting rate limited by the model provider, you can use this approach to space out your requests.\n",
     "\n",
+    ":::info Requires ``langchain-core >= 0.2.24``\n",
     "\n",
-    "\n",
-    "LangChain provides an optional caching layer for chat models. This is useful for two main reasons:\n",
-    "\n",
-    "- It can save you money by reducing the number of API calls you make to the LLM provider, if you're often requesting the same completion multiple times. This is especially useful during app development.\n",
-    "- It can speed up your application by reducing the number of API calls you make to the LLM provider.\n",
-    "\n",
-    "This guide will walk you through how to enable this in your apps."
+    "This functionality was added in ``langchain-core == 0.2.24``. Please make sure your package is up to date.\n",
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "289b31de",
+   "id": "cbc3c873-6109-4e03-b775-b73c1003faea",
    "metadata": {},
    "source": [
-    "```{=mdx}\n",
-    "import ChatModelTabs from \"@theme/ChatModelTabs\";\n",
+    "## Initialize a rate limiter\n",
     "\n",
-    "<ChatModelTabs customVarName=\"llm\" />\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c6641f37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# | output: false\n",
-    "# | echo: false\n",
-    "\n",
-    "import os\n",
-    "from getpass import getpass\n",
-    "\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "\n",
-    "os.environ[\"OPENAI_API_KEY\"] = getpass()\n",
-    "\n",
-    "llm = ChatOpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5472a032",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# <!-- ruff: noqa: F821 -->\n",
-    "from langchain.globals import set_llm_cache"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "357b89a8",
-   "metadata": {},
-   "source": [
-    "## In Memory Cache\n",
-    "\n",
-    "This is an ephemeral cache that stores model calls in memory. It will be wiped when your environment restarts, and is not shared across processes."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "113e719a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 645 ms, sys: 214 ms, total: 859 ms\n",
-      "Wall time: 829 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Why don't scientists trust atoms?\\n\\nBecause they make up everything!\", response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 11, 'total_tokens': 24}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None}, id='run-b6836bdd-8c30-436b-828f-0ac5fc9ab50e-0')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "from langchain.cache import InMemoryCache\n",
-    "\n",
-    "set_llm_cache(InMemoryCache())\n",
-    "\n",
-    "# The first time, it is not yet in cache, so it should take longer\n",
-    "llm.invoke(\"Tell me a joke\")"
+    "Langchain comes with a built-in in memory rate limiter. \n",
+    "This rate limiter is thread safe and can be shared by multiple threads in the same process."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a2121434",
+   "id": "aa9c3c8c-0464-4190-a8c5-d69d173505a6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 822 µs, sys: 288 µs, total: 1.11 ms\n",
-      "Wall time: 1.06 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content=\"Why don't scientists trust atoms?\\n\\nBecause they make up everything!\", response_metadata={'token_usage': {'completion_tokens': 13, 'prompt_tokens': 11, 'total_tokens': 24}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None}, id='run-b6836bdd-8c30-436b-828f-0ac5fc9ab50e-0')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "# The second time it is, so it goes faster\n",
-    "llm.invoke(\"Tell me a joke\")"
+    "from langchain_core.rate_limiters import InMemoryRateLimiter\n",
+    "\n",
+    "rate_limiter = InMemoryRateLimiter(\n",
+    "    requests_per_second=0.1, # <-- Super slow! We can only make a request once every 10 seconds!!\n",
+    "    check_every_n_seconds=0.1, # Wake up every 100 ms to check whether allowed to make a request,\n",
+    "    max_bucket_size=10, # Controls the maximum burst size.\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b88ff8af",
+   "id": "8e058bde-9413-4b08-8cc6-0c9cb638f19f",
    "metadata": {},
    "source": [
-    "## SQLite Cache\n",
+    "## Choose a model\n",
     "\n",
-    "This cache implementation uses a `SQLite` database to store responses, and will last across process restarts."
+    "Choose any model and pass to it the rate_limiter via the `rate_limiter` attribute."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "99290ab4",
+   "execution_count": 2,
+   "id": "0f880a3a-c047-4e94-a323-fff2a4c0e96d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!rm .langchain.db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fe826c5c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We can do the same thing with a SQLite cache\n",
-    "from langchain_community.cache import SQLiteCache\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "import time\n",
     "\n",
-    "set_llm_cache(SQLiteCache(database_path=\".langchain.db\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "eb558734",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 9.91 ms, sys: 7.68 ms, total: 17.6 ms\n",
-      "Wall time: 657 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Why did the scarecrow win an award? Because he was outstanding in his field!', response_metadata={'token_usage': {'completion_tokens': 17, 'prompt_tokens': 11, 'total_tokens': 28}, 'model_name': 'gpt-3.5-turbo', 'system_fingerprint': 'fp_c2295e73ad', 'finish_reason': 'stop', 'logprobs': None}, id='run-39d9e1e8-7766-4970-b1d8-f50213fd94c5-0')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# The first time, it is not yet in cache, so it should take longer\n",
-    "llm.invoke(\"Tell me a joke\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "497c7000",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 52.2 ms, sys: 60.5 ms, total: 113 ms\n",
-      "Wall time: 127 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "AIMessage(content='Why did the scarecrow win an award? Because he was outstanding in his field!', id='run-39d9e1e8-7766-4970-b1d8-f50213fd94c5-0')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# The second time it is, so it goes faster\n",
-    "llm.invoke(\"Tell me a joke\")"
+    "if \"ANTHROPIC_API_KEY\" not in os.environ:\n",
+    "    os.environ[\"ANTHROPIC_API_KEY\"] = getpass()\n",
+    "\n",
+    "    \n",
+    "from langchain_anthropic import ChatAnthropic\n",
+    "\n",
+    "model = ChatAnthropic(model_name=\"claude-3-opus-20240229\", rate_limiter=rate_limiter)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2950a913",
+   "id": "80c9ab3a-299a-460f-985c-90280a046f52",
    "metadata": {},
    "source": [
-    "## Next steps\n",
-    "\n",
-    "You've now learned how to cache model responses to save time and money.\n",
-    "\n",
-    "Next, check out the other how-to guides chat models in this section, like [how to get a model to return structured output](/docs/how_to/structured_output) or [how to create your own custom chat model](/docs/how_to/custom_chat_model)."
+    "Let's confirm that the rate limiter works. We should only be able to invoke the model once per 10 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d074265c-9f32-4c5f-b914-944148993c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.599073648452759\n",
+      "10.7502121925354\n",
+      "10.244257926940918\n",
+      "8.83088755607605\n",
+      "11.645203590393066\n"
+     ]
+    }
+   ],
+   "source": [
+    "for _ in range(5):\n",
+    "    tic = time.time()\n",
+    "    model.invoke('hello')\n",
+    "    toc = time.time()\n",
+    "    print(toc-tic)"
    ]
   }
  ],
