--- a/docs/docs/how_to/chat_model_rate_limiting.ipynb
+++ b/docs/docs/how_to/chat_model_rate_limiting.ipynb
@@ -44,9 +44,9 @@
     "from langchain_core.rate_limiters import InMemoryRateLimiter\n",
     "\n",
     "rate_limiter = InMemoryRateLimiter(\n",
-    "    requests_per_second=0.1, # <-- Super slow! We can only make a request once every 10 seconds!!\n",
-    "    check_every_n_seconds=0.1, # Wake up every 100 ms to check whether allowed to make a request,\n",
-    "    max_bucket_size=10, # Controls the maximum burst size.\n",
+    "    requests_per_second=0.1,  # <-- Super slow! We can only make a request once every 10 seconds!!\n",
+    "    check_every_n_seconds=0.1,  # Wake up every 100 ms to check whether allowed to make a request,\n",
+    "    max_bucket_size=10,  # Controls the maximum burst size.\n",
     ")"
    ]
   },
@@ -68,13 +68,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from getpass import getpass\n",
     "import time\n",
+    "from getpass import getpass\n",
     "\n",
     "if \"ANTHROPIC_API_KEY\" not in os.environ:\n",
     "    os.environ[\"ANTHROPIC_API_KEY\"] = getpass()\n",
     "\n",
-    "    \n",
+    "\n",
     "from langchain_anthropic import ChatAnthropic\n",
     "\n",
     "model = ChatAnthropic(model_name=\"claude-3-opus-20240229\", rate_limiter=rate_limiter)"
@@ -109,9 +109,9 @@
    "source": [
     "for _ in range(5):\n",
     "    tic = time.time()\n",
-    "    model.invoke('hello')\n",
+    "    model.invoke(\"hello\")\n",
     "    toc = time.time()\n",
-    "    print(toc-tic)"
+    "    print(toc - tic)"
    ]
   }
  ],
