--- a/docs/docs/how_to/chat_model_rate_limiting.ipynb
+++ b/docs/docs/how_to/chat_model_rate_limiting.ipynb
@@ -5,7 +5,7 @@
    "id": "dcf87b32",
    "metadata": {},
    "source": [
-    "# How to rate limit chat models\n",
+    "# How to handle rate limits\n",
     "\n",
     ":::info Prerequisites\n",
     "\n",
@@ -14,8 +14,13 @@
     "- [LLMs](/docs/concepts/#llms)\n",
     ":::\n",
     "\n",
-    "You may find yourself in situations where you want to limit the requests made by your chat model. For example, if you're running\n",
-    "evaluations and are getting rate limited by the model provider, you can use this approach to space out your requests.\n",
+    "\n",
+    "You may find yourself in a situation where you are getting rate limited by the model provider API because you're making too many requests.\n",
+    "\n",
+    "For example, this might happen if you are running many parallel queries to benchmark the chat model on a test dataset.\n",
+    "\n",
+    "If you are facing such a situation, you can use a rate limiter to help match the rate at which you're making request to the rate allowed\n",
+    "by the API.\n",
     "\n",
     ":::info Requires ``langchain-core >= 0.2.24``\n",
     "\n",
@@ -30,8 +35,10 @@
    "source": [
     "## Initialize a rate limiter\n",
     "\n",
-    "Langchain comes with a built-in in memory rate limiter. \n",
-    "This rate limiter is thread safe and can be shared by multiple threads in the same process."
+    "Langchain comes with a built-in in memory rate limiter. This rate limiter is thread safe and can be shared by multiple threads in the same process.\n",
+    "\n",
+    "The provided rate limiter can only limit the number of requests per unit time. It will not help if you need to also limited based on the size\n",
+    "of the requests."
    ]
   },
   {
