--- a/docs/docs/contributing/integrations/community.mdx
+++ b/docs/docs/contributing/integrations/community.mdx
@@ -34,7 +34,18 @@ can help other users get started with the service in as smooth a way as possible
 
 In the following sections, we'll walk through how to contribute a chat model from a fake company, `Parrot Link AI`.
 
-To begin, make sure you have all the dependencies outlined in guide on [Contributing Code](/docs/contributing/code/).
+### 1. Fork and clone the repository
+
+First, let's fork the [LangChain Repository](https://github.com/langchain-ai/langchain) 
+into a personal account fork, **not an organization fork** ([why?](/docs/contributing/faq/#how-do-i-allow-maintainers-to-edit-my-pr)).
+
+You can fork the repository [here](https://github.com/langchain-ai/langchain/fork), and if you are prompted to "Choose an owner," select your personal username.
+
+Now, clone the repository to your local machine:
+
+```bash
+git clone https://github.com/<your-username>/langchain.git
+```
 
 The `langchain-community` package is in `libs/community` and contains most integrations.
 
