--- a/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
+++ b/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
@@ -127,7 +127,7 @@
    "source": [
     "from langchain.chains.query_constructor.base import AttributeInfo\n",
     "from langchain.retrievers.self_query.base import SelfQueryRetriever\n",
-    "from langchain_community.query_constructors.hanavector import HANATranslator\n",
+    "from langchain_community.query_constructors.hanavector import HanaTranslator\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
     "llm = ChatOpenAI(model=\"gpt-3.5-turbo\")\n",
@@ -157,7 +157,7 @@
     "\n",
     "document_content_description = \"A collection of persons\"\n",
     "\n",
-    "hana_translator = HANATranslator()\n",
+    "hana_translator = HanaTranslator()\n",
     "\n",
     "retriever = SelfQueryRetriever.from_llm(\n",
     "    llm,\n",
