--- a/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
+++ b/docs/docs/integrations/retrievers/self_query/hanavector_self_query.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SAP HANA Cloud Vector Engine self querying\n",
+    "# SAP HANA Cloud Vector Engine\n",
     "\n",
     "For more information on how to setup the SAP HANA vetor store, take a look at the [documentation](/docs/integrations/vectorstores/sap_hanavector.ipynb).\n",
     "\n",
