--- a/docs/docs/integrations/llms/yi.ipynb
+++ b/docs/docs/integrations/llms/yi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Yi LLM\n",
+    "# Yi\n",
     "[01.AI](https://www.lingyiwanwu.com/en), founded by Dr. Kai-Fu Lee, is a global company at the forefront of AI 2.0. They offer cutting-edge large language models, including the Yi series, which range from 6B to hundreds of billions of parameters. 01.AI also provides multimodal models, an open API platform, and open-source options like Yi-34B/9B/6B and Yi-VL."
    ]
   },
@@ -63,7 +63,12 @@
    "outputs": [],
    "source": [
     "# Generate method\n",
-    "res = llm.generate(prompts=[\"Explain the concept of large language models.\", \"What are the potential applications of AI in healthcare?\"])\n",
+    "res = llm.generate(\n",
+    "    prompts=[\n",
+    "        \"Explain the concept of large language models.\",\n",
+    "        \"What are the potential applications of AI in healthcare?\",\n",
+    "    ]\n",
+    ")\n",
     "print(res)"
    ]
   },
@@ -87,9 +92,13 @@
     "# Asynchronous streaming\n",
     "import asyncio\n",
     "\n",
+    "\n",
     "async def run_aio_stream():\n",
-    "    async for chunk in llm.astream(\"Write a brief on the future of AI according to Dr. Kai-Fu Lee's vision.\"):\n",
+    "    async for chunk in llm.astream(\n",
+    "        \"Write a brief on the future of AI according to Dr. Kai-Fu Lee's vision.\"\n",
+    "    ):\n",
     "        print(chunk, end=\"\", flush=True)\n",
+    "\n",
     "\n",
     "asyncio.run(run_aio_stream())"
    ]
@@ -107,7 +116,9 @@
     "    top_p=0.9,\n",
     ")\n",
     "\n",
-    "res = llm_with_params(\"Propose an innovative AI application that could benefit society.\")\n",
+    "res = llm_with_params(\n",
+    "    \"Propose an innovative AI application that could benefit society.\"\n",
+    ")\n",
     "print(res)"
    ]
   }
