--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -97,6 +97,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "\n",
     "sys.path.append(\"./../../../../libs/community/langchain_community\")\n",
     "from chat_models.yi import ChatYi\n",
     "\n",
@@ -104,7 +105,7 @@
     "    model=\"yi-large\",\n",
     "    temperature=0,\n",
     "    timeout=60,\n",
-    "    yi_api_base=\"https://api.01.ai/v1/chat/completions\"\n",
+    "    yi_api_base=\"https://api.01.ai/v1/chat/completions\",\n",
     "    # other params...\n",
     ")"
    ]
@@ -133,7 +134,7 @@
     }
    ],
    "source": [
-    "from langchain_core.messages import SystemMessage, HumanMessage\n",
+    "from langchain_core.messages import HumanMessage, SystemMessage\n",
     "\n",
     "messages = [\n",
     "    SystemMessage(content=\"You are an AI assistant specializing in technology trends.\"),\n",
