--- a/docs/docs/how_to/agent_toolkits.ipynb
+++ b/docs/docs/how_to/agent_toolkits.ipynb
@@ -217,7 +217,7 @@
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
-    "agent_executor = create_react_agent(llm, tools, messages_modifier=system_message)"
+    "agent_executor = create_react_agent(llm, tools, state_modifier=system_message)"
    ]
   },
   {
@@ -588,31 +588,7 @@
     "# Tools\n",
     "tools = [PythonAstREPLTool(locals={\"df\": df})]\n",
     "\n",
-    "agent_executor = create_react_agent(llm, tools, messages_modifier=system_message)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8fe753f-0d9a-4ed8-910b-8769ce39c32e",
-   "metadata": {},
-   "source": [
-    "## Example: web search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3dead8b-e96a-4028-8e76-c3dc2a014f4f",
-   "metadata": {},
-   "source": [
-    "### Tools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c80d70af-ad44-4a21-a3fa-e3b3d4a6d79b",
-   "metadata": {},
-   "source": [
-    "### Prompt"
+    "agent_executor = create_react_agent(llm, tools, state_modifier=system_message)"
    ]
   },
   {
@@ -624,20 +600,150 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dda55e16-7ba5-49ba-8c22-5f52ab65a907",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "29be4caa-e792-40c7-8a3e-d070f50f3e73",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Tools"
+    "openapi_api_spec = \"\"\"openapi: 3.0.0\n",
+    "info:\n",
+    "  title: JSONPlaceholder API\n",
+    "  version: 1.0.0\n",
+    "servers:\n",
+    "- url: https://jsonplaceholder.typicode.com\n",
+    "paths:\n",
+    "  /posts:\n",
+    "    get:\n",
+    "      summary: Get posts\n",
+    "      parameters: &id001\n",
+    "      - name: _limit\n",
+    "        in: query\n",
+    "        required: false\n",
+    "        schema:\n",
+    "          type: integer\n",
+    "          example: 2\n",
+    "        description: Limit the number of results\n",
+    "      responses:\n",
+    "        '200':\n",
+    "          description: Successful response\n",
+    "          content:\n",
+    "            application/json:\n",
+    "              schema:\n",
+    "                type: object\n",
+    "                properties:\n",
+    "                  userId: int\n",
+    "                  id: int\n",
+    "                  title: str\n",
+    "                  body: str\n",
+    "  /comments:\n",
+    "    get:\n",
+    "      summary: Get comments\n",
+    "      parameters: *id001\n",
+    "      responses:\n",
+    "        '200':\n",
+    "          description: Successful response\n",
+    "          content:\n",
+    "            application/json:\n",
+    "              schema:\n",
+    "                type: object\n",
+    "                properties:\n",
+    "                  postId: int\n",
+    "                  id: int\n",
+    "                  name: str\n",
+    "                  email: str\n",
+    "                  body: str\n",
+    "\"\"\""
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0995fb08-1b08-4ac0-9a76-8cd514230265",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cc55107c-4315-4d1b-ae5e-4bbcea7beec4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Prompt"
+    "from langchain import hub\n",
+    "from langchain_community.agent_toolkits.openapi.toolkit import RequestsToolkit\n",
+    "from langchain_community.utilities.requests import TextRequestsWrapper\n",
+    "from langgraph.prebuilt import create_react_agent\n",
+    "\n",
+    "\n",
+    "# Prompt\n",
+    "prompt_template = hub.pull(\"langchain-ai/api-agent-system-prompt\")\n",
+    "system_message = prompt_template.format(api_spec=openapi_api_spec)\n",
+    "\n",
+    "\n",
+    "# Tools\n",
+    "toolkit = RequestsToolkit(\n",
+    "    requests_wrapper=TextRequestsWrapper(headers={}),\n",
+    "    allow_dangerous_requests=True,\n",
+    ")\n",
+    "tools = toolkit.get_tools()\n",
+    "\n",
+    "agent_executor = create_react_agent(llm, tools, state_modifier=system_message)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8d8c86e-3b4f-4668-83d0-4343e2597ccd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What are the titles of the top two posts?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  requests_get (call_0uLTXYE8KYQcHMRq3lYLho9z)\n",
+      " Call ID: call_0uLTXYE8KYQcHMRq3lYLho9z\n",
+      "  Args:\n",
+      "    url: https://jsonplaceholder.typicode.com/posts?_limit=2\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: requests_get\n",
+      "\n",
+      "[\n",
+      "  {\n",
+      "    \"userId\": 1,\n",
+      "    \"id\": 1,\n",
+      "    \"title\": \"sunt aut facere repellat provident occaecati excepturi optio reprehenderit\",\n",
+      "    \"body\": \"quia et suscipit\\nsuscipit recusandae consequuntur expedita et cum\\nreprehenderit molestiae ut ut quas totam\\nnostrum rerum est autem sunt rem eveniet architecto\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"userId\": 1,\n",
+      "    \"id\": 2,\n",
+      "    \"title\": \"qui est esse\",\n",
+      "    \"body\": \"est rerum tempore vitae\\nsequi sint nihil reprehenderit dolor beatae ea dolores neque\\nfugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis\\nqui aperiam non debitis possimus qui neque nisi nulla\"\n",
+      "  }\n",
+      "]\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The titles of the top two posts are:\n",
+      "1. \"sunt aut facere repellat provident occaecati excepturi optio reprehenderit\"\n",
+      "2. \"qui est esse\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "events = agent_executor.stream(\n",
+    "    {\"messages\": [(\"user\", \"What are the titles of the top two posts?\")]},\n",
+    "    stream_mode=\"values\",\n",
+    ")\n",
+    "for event in events:\n",
+    "    event[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1e41357-0876-4178-8d38-194a35f65c1c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
